--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Light</title>
+		<title>Snow!</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
 	</head>
 	<body>
 		<header>
-			<h1>Light</h1>
+			<h1>Snow!</h1>
 		</header>
 			<section id="content">
-				<canvas id="SampleAssignmentSimple" data-processing-sources="SampleAssignmentSimple.pde">
+				<canvas id="snowV4" data-processing-sources="snowV4.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Light
+		    Snow!
 	    </footer>
 	</body>
 </html>
