--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 	<head>
 		<meta charset="utf-8">
-		<title>Snow!</title>
+		<title>Merry Christmas</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 		<link rel="stylesheet" href="styles.css">
 		<script src="processing.js"></script>
@@ -11,11 +11,11 @@
 			<h1>Snow!</h1>
 		</header>
 			<section id="content">
-				<canvas id="snowV4" data-processing-sources="snowV4.pde">
+				<canvas id="SampleAssignmentSimple" data-processing-sources="SampleAssignmentSimple.pde">
 				</canvas>
 		    </section>
 	    <footer>
-		    Snow!
+		    Benedict Donnay
 	    </footer>
 	</body>
 </html>
